# SE-Vercel-deploy

./: .env.example  .eslintignore  .eslintrc.cjs  .firebaserc  .gitattributes  .gitignore  .npmrc  .vercelignore  API.md  CLAUDE.md  COMPLETE_PHASE_1_EXECUTION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_FIRESTORE_RULES.md  FIREBASE_ADMIN_INTEGRATION.md  FIREBASE_INTEGRATION_COMPLETE.md  GITHUB_PUSH_INSTRUCTIONS.md  INTEGRATION.md  INTEGRATION_SUMMARY.txt  LICENSE  MASTER_INTEGRATION_MAP.md  NEXT_STEPS.md  PHASE_1_3_PUBSUB_IMPLEMENTATION.md  PHASE_1_4_OBSERVABILITY_DEPLOYMENT.md  PHASE_1_DEPLOYMENT_SUMMARY.md  PHASE_2_CLIENT_PORTAL_BLUEPRINT.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_3_ADMIN_CONSOLE_BLUEPRINT.md  README.md  SE-Vercel-deploy.code-workspace  SECURITY.md  adminloginfix.patch  advice.html  ai-engine.html  career.html  compounds.html  copy_logic.ps1  deploy-vercel.yml  eslint.config.mjs  (+41 more)
.agent/: GEMINI.md
.agents/: AGENTS.md
.claude/: ecc-tools.json  identity.json  instructions.md  launch.json
.codebuddy/: codebase_analysis.db  security.json  team_graph.db  vector_store.db
.codex/: AGENTS.md
.github/: dependabot.yml  labeler.yml  lighthouse.json
6-7 design/: HOUZEZ_IMPROVEMENTS.md  IMPLEMENTATION_STATUS.md  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  app.jsx  readme.md  sections.jsx
FUTURE_PLAN/: 01-gravity-memory.md  02-mempalace.md  03-dsl-parser-restore.md  04-growth-and-enhancements.md  05-inventory-wiring-notes.md  README.md
_archived_repos/: MANIFEST.json  MANIFEST.md
_scratch/: fm-test.html
api/: index.ts
design/: ARCHITECTURE.md  CONTRIBUTING.md  OPENCLAW_ARCHITECT.md  _ds_manifest.json  advice.html  ai-engine.html  app-enhanced.jsx  app.jsx  career.html  compounds.html  eslint.config.mjs  firebase-config.js  firebase-data.js  firebase.json  firestore.indexes.json  firestore.rules  home.css  index.html  matches.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pricing.html  properties.html  property.html  reorganize.sh  roi.html  schema.sql  sections.jsx  setup-branches.sh  styles.css  tailwind.config.js
design_handoff_client_portal/: README.md
docs/: ADMIN_MIGRATION_PLAN.md  API_CONTRACT.md  ARCHITECTURE.md  ARC_SURVEY_REPORT.md  BACKEND_TESTS.md  CLAUDE.md  CLIENT_PAGE_INTEGRATION_SUMMARY.md  COMPLETE_PHASE_1_EXECUTION_SUMMARY.md  DEPLOYMENT.md  DESIGN.md  FEATURE_INVENTORY.md  FIREBASE_APPCHECK_SETUP.md  FIREBASE_SETUP.md  GIT_WORKFLOW.md  JD_ACQUISITION_EN.md  MASTER_PROJECT_ROADMAP.md  N8N_WORKFLOW_EXAMPLES.md  OBSIDIAN_MEMORY.md  OPENCLAW_ARCHITECT.md  PHASE1_FIRESTORE_REVIEW.md  THEME_SYSTEM.md  secrets.md  sierra_estatesE_BROCHURE_EN.md
firebase/Sierra-Estates-Final/back/RuView/main/firmware/esp32-csi-node/main/: CMakeLists.txt  Kconfig.projbuild  adaptive_controller.c  csi_collector.c  csi_collector.h  edge_processing.c  main.c  rv_feature_state.h
firebase/Sierra-Estates-Final/back/RuView/main/v2/crates/wifi-densepose-signal/: Cargo.toml
firebase/Sierra-Estates-Final/back/RuView/main/v2/crates/wifi-densepose-signal/benches/: aether_prefilter_bench.rs
firebase/Sierra-Estates-Final/back/RuView/main/v2/crates/wifi-densepose-signal/src/ruvsense/: field_model.rs  longitudinal.rs  mod.rs  pose_tracker.rs
functions/: index.js  package.json  tsconfig.json
gh-pages-hero-update/: index.html
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  GRAPH_REPORT.md  (+1 more)
(+2052 files in other folders)
